# Gestion-de-Inventario

./: .env  .gitignore  main.py  pyproject.toml
config/: db_config.py
models/: clientes_model.py  movimientos_model.py  product_model.py  producto.py  sub_compra_model.py
services/: cliente_service.py  product_services.py  registrar_movimiento_service.py
