[project]
name = "gestion-de-inventario"
version = "0.1.0"
description = "Aplicación de inventario de productos con conexión a Supabase"
authors = [
    {name = "Mapachesz",email = "Lucastbernards@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
